Fixing the markup on the project-blocks partial to avoid empty block-wrap elements, disabling the js bandaid, starting work on a simple lightbox, adding ability to add text to half-width image blocks

--- a/assets/scss/components/_flickity.scss
+++ b/assets/scss/components/_flickity.scss
@@ -32,14 +32,13 @@ https://flickity.metafizzy.co
 }
 
 .flickity-enabled.is-draggable .flickity-viewport {
-  // cursor: move;
-  // cursor: -webkit-grab;
-  // cursor: url('/assets/dist/images/drag.svg'), auto;
+  cursor: move;
+  cursor: -webkit-grab;
 }
 
 .flickity-enabled.is-draggable .flickity-viewport.is-pointer-down {
-  // cursor: -webkit-grabbing;
-  // cursor: grabbing;
+  cursor: -webkit-grabbing;
+  cursor: grabbing;
 }
 
 /* ---- flickity-button ---- */
